include/raiapi2_c.h

/* ---- handles --------------------------------------------------------- */
typedef struct rai_api_s        * rai_api_t;
typedef struct rai_session_s    * rai_session_t;
typedef struct rai_queue_s      * rai_queue_t;
typedef struct rai_subscribe_s  * rai_subscribe_t;
typedef struct rai_publish_s    * rai_publish_t;
typedef struct rai_ipublish_s   * rai_ipublish_t; /* interactive publish */
typedef struct rai_timer_s      * rai_timer_t;
typedef struct rai_dict_s       * rai_dict_t;
typedef struct rai_entitle_s    * rai_entitle_t;
typedef struct rai_args_s       * rai_args_t;
typedef struct rai_msg_s        * rai_msg_t;
typedef struct rai_callback_s   * rai_callback_t; /* opaque cb registration */
/* error: pointer to a static { status, reason, module } record, NULL = ok */
typedef const struct rai_error_s * rai_err_t;
RAIAPI2_C_EXP uint32_t     rai_err_status( rai_err_t e );
RAIAPI2_C_EXP const char * rai_err_reason( rai_err_t e );
RAIAPI2_C_EXP const char * rai_err_module( rai_err_t e );
/* ---- RaiApi ----------------------------------------------------------- */
RAIAPI2_C_EXP rai_err_t rai_api_open( const char *api_name,  int argc,
                                      const char **argv,  rai_api_t *api );
RAIAPI2_C_EXP void      rai_api_close( rai_api_t api );   /* RaiApi.Close */
RAIAPI2_C_EXP void      rai_api_delete( rai_api_t api );  /* finalize */
RAIAPI2_C_EXP const char * rai_api_name( rai_api_t api );
RAIAPI2_C_EXP const char * rai_api_version( void );
RAIAPI2_C_EXP rai_err_t rai_api_get_args( rai_api_t api,  rai_args_t args );
RAIAPI2_C_EXP rai_err_t rai_api_get_dict_args( rai_args_t args );
RAIAPI2_C_EXP rai_err_t rai_api_parse_args( rai_api_t api,  rai_args_t args );
RAIAPI2_C_EXP rai_err_t rai_api_open_log_args( rai_args_t args,  int *opened );
RAIAPI2_C_EXP rai_err_t rai_api_open_log( const char *name,  int level,
                                          int verb );
/* err may be NULL; where/line identify the caller, may be NULL/0 */
RAIAPI2_C_EXP void      rai_api_print_log( rai_api_t api,  int level,
                                           rai_err_t err,  const char *where,
                                           int line,  const char *s );
RAIAPI2_C_EXP void      rai_api_log( int level,  rai_err_t err,
                                     const char *where,  int line,
                                     const char *s );
RAIAPI2_C_EXP rai_err_t rai_api_open_dict( rai_args_t args,  int *loaded );
RAIAPI2_C_EXP rai_err_t rai_api_create_session( rai_api_t api,
                                                rai_session_t *session );
RAIAPI2_C_EXP rai_err_t rai_api_new_msg( int proto,  uint16_t msg_type,
                                         uint16_t rec_type,  uint16_t seqno,
                                         uint16_t rec_status,  rai_msg_t *m );
RAIAPI2_C_EXP rai_err_t rai_api_new_msg_form( int proto,  uint16_t msg_type,
                                              const char *form_type,
                                              uint16_t seqno,
                                              uint16_t rec_status,
                                              rai_msg_t *m );
RAIAPI2_C_EXP int       rai_api_set_ioctl( rai_api_t api,  const char *parm,
                                           const char *value );
/* signal handler: SIGINT(2) SIGHUP(1) SIGTERM(15) -> fn( sig, closure ) */
typedef void (*rai_signal_fn)( int sig,  void *closure );
RAIAPI2_C_EXP rai_err_t rai_api_register_sig_handler( rai_signal_fn fn,
                                                      void *closure );
typedef void (*rai_msg_fn)( void *closure,  const rai_msg_event_t *ev,
                            rai_msg_t msg );
typedef void (*rai_timer_fn)( void *closure,  rai_timer_t timer );
typedef void (*rai_subscribe_fn)( void *closure,
                                  const rai_subscribe_event_t *ev,
                                  rai_msg_t msg );
typedef void (*rai_dataloss_fn)( void *closure,
                                 const rai_dataloss_event_t *ev );
typedef void (*rai_connection_fn)( void *closure,
                                   const rai_connection_event_t *ev );
/* ---- RaiSession ------------------------------------------------------- */
RAIAPI2_C_EXP rai_err_t rai_session_start( rai_session_t s );
RAIAPI2_C_EXP rai_err_t rai_session_create_queue( rai_session_t s,
                                                  int direct,  rai_queue_t *q );
RAIAPI2_C_EXP rai_err_t rai_session_create_publish( rai_session_t s,
                                                    int auto_inc,
                                                    rai_publish_t *p );
RAIAPI2_C_EXP rai_err_t rai_session_create_dict( rai_session_t s,
                                                 rai_dict_t *d );
RAIAPI2_C_EXP rai_err_t rai_session_destroy( rai_session_t s );
RAIAPI2_C_EXP rai_err_t rai_session_login( rai_session_t s,  const char *user,
                                           rai_entitle_t *e );
/* cb registration lives until rai_callback_delete() (after session destroy) */
RAIAPI2_C_EXP rai_err_t rai_session_set_dataloss_cb( rai_session_t s,
                                                     rai_dataloss_fn loss_fn,
                                                     rai_connection_fn conn_fn,
                                                     void *closure,
                                                     rai_callback_t *cb );
RAIAPI2_C_EXP rai_err_t rai_session_notify_status( rai_session_t s,
                                                   uint16_t msg_type,
                                                   uint16_t rec_status );
RAIAPI2_C_EXP rai_api_t rai_session_get_api( rai_session_t s );
RAIAPI2_C_EXP rai_err_t rai_session_set_name( rai_session_t s,
                                              const char *name );
RAIAPI2_C_EXP const char * rai_session_get_name( rai_session_t s );
RAIAPI2_C_EXP void      rai_callback_delete( rai_callback_t cb );
/* ---- RaiQueue --------------------------------------------------------- */
RAIAPI2_C_EXP rai_err_t rai_queue_create_subscribe( rai_queue_t q,
                                                    rai_msg_fn fn,
                                                    void *closure,
                                                    rai_subscribe_t *sub,
                                                    rai_callback_t *cb );
RAIAPI2_C_EXP rai_err_t rai_queue_create_timer( rai_queue_t q,
                                                rai_timer_fn fn,  void *closure,
                                                rai_timer_t *t,
                                                rai_callback_t *cb );
RAIAPI2_C_EXP rai_err_t rai_queue_create_ipublish( rai_queue_t q,
                                                   rai_subscribe_fn fn,
                                                   void *closure,
                                                   rai_ipublish_t *p,
                                                   rai_callback_t *cb );
RAIAPI2_C_EXP rai_err_t rai_queue_notify_status( rai_queue_t q,
                                                 uint16_t msg_type,
                                                 uint16_t rec_status );
RAIAPI2_C_EXP rai_err_t rai_queue_mainloop( rai_queue_t q );
RAIAPI2_C_EXP rai_err_t rai_queue_timed_dispatch( rai_queue_t q,
                                                  uint32_t ival_ms );
RAIAPI2_C_EXP rai_err_t rai_queue_dispatch( rai_queue_t q );
RAIAPI2_C_EXP uint32_t  rai_queue_get_depth( rai_queue_t q );
RAIAPI2_C_EXP rai_err_t rai_queue_destroy( rai_queue_t q );
RAIAPI2_C_EXP rai_session_t rai_queue_get_session( rai_queue_t q );
RAIAPI2_C_EXP rai_err_t rai_subscribe_start( rai_subscribe_t s,
                                             const char *subject,  int parm,
                                             uint32_t timeout_ms );
RAIAPI2_C_EXP rai_err_t rai_subscribe_cancel( rai_subscribe_t s );
RAIAPI2_C_EXP rai_err_t rai_subscribe_refresh( rai_subscribe_t s,
                                               uint32_t timeout_ms );
RAIAPI2_C_EXP const char * rai_subscribe_subject( rai_subscribe_t s );
RAIAPI2_C_EXP int       rai_subscribe_in_progress( rai_subscribe_t s );
RAIAPI2_C_EXP rai_queue_t rai_subscribe_get_queue( rai_subscribe_t s );
RAIAPI2_C_EXP const char * rai_subscribe_state_to_string( int state );
/* ---- RaiPublish / RaiInteractivePublish ------------------------------- */
RAIAPI2_C_EXP rai_err_t rai_publish_msg( rai_publish_t p,  const char *subject,
                                         rai_msg_t m,  int64_t stamp );
RAIAPI2_C_EXP rai_err_t rai_publish_buf( rai_publish_t p,  const char *subject,
                                         const void *buf,  uint32_t len,
                                         int64_t stamp );
RAIAPI2_C_EXP rai_err_t rai_publish_set_prefix( rai_publish_t p,
                                                const char *prefix );
RAIAPI2_C_EXP const char * rai_publish_get_prefix( rai_publish_t p );
RAIAPI2_C_EXP uint32_t  rai_publish_get_seqno( rai_publish_t p );
RAIAPI2_C_EXP void      rai_publish_set_seqno( rai_publish_t p,  uint32_t n );
RAIAPI2_C_EXP rai_err_t rai_publish_destroy( rai_publish_t p );
RAIAPI2_C_EXP rai_session_t rai_publish_get_session( rai_publish_t p );
/* an interactive publish is also a publish */
RAIAPI2_C_EXP rai_publish_t rai_ipublish_publish( rai_ipublish_t p );
RAIAPI2_C_EXP rai_err_t rai_ipublish_start( rai_ipublish_t p,
                                            const char *subject );
RAIAPI2_C_EXP rai_err_t rai_ipublish_cancel( rai_ipublish_t p );
RAIAPI2_C_EXP int       rai_ipublish_in_progress( rai_ipublish_t p );
RAIAPI2_C_EXP rai_queue_t rai_ipublish_get_queue( rai_ipublish_t p );
/* ---- RaiTimer --------------------------------------------------------- */
RAIAPI2_C_EXP rai_err_t rai_timer_start( rai_timer_t t );
RAIAPI2_C_EXP void      rai_timer_stop( rai_timer_t t );
RAIAPI2_C_EXP int64_t   rai_timer_get_interval( rai_timer_t t );
RAIAPI2_C_EXP void      rai_timer_set_interval( rai_timer_t t,  int64_t ms );
RAIAPI2_C_EXP rai_queue_t rai_timer_get_queue( rai_timer_t t );