src/raiapi/dotnet/RaiApi2/Native.cs

/* Copyright (c) 2026 Rai Technology.  All rights reserved.
 *  http://www.raitechnology.com
 *
 * P/Invoke declarations for libraiapi2c (include/raiapi2_c.h).  Everything
 * here is internal; the public surface mirrors the Java binding in
 * com.rai.raiapi2 / com.rai.raimsg and lives in the other files.
 */
using System;
using System.Runtime.InteropServices;
using System.Text;

namespace Com.Rai.Interop {

/* a rai_err_t is a pointer to a static { status, reason, module } record */
internal static class Native {
  internal const string Lib = "raiapi2c";
  internal const CallingConvention CC = CallingConvention.Cdecl;

  [UnmanagedFunctionPointer( CC )]
  internal delegate uint WriteFn( IntPtr cl,  IntPtr buf,  uint len );
  [UnmanagedFunctionPointer( CC )]
  internal delegate void SignalFn( int sig,  IntPtr cl );
  [UnmanagedFunctionPointer( CC )]
  internal delegate void MsgFn( IntPtr cl,  IntPtr ev,  IntPtr msg );
  [UnmanagedFunctionPointer( CC )]
  internal delegate void TimerFn( IntPtr cl,  IntPtr timer );
  [UnmanagedFunctionPointer( CC )]
  internal delegate void SubscribeFn( IntPtr cl,  IntPtr ev,  IntPtr msg );
  [UnmanagedFunctionPointer( CC )]
  internal delegate void DataLossFn( IntPtr cl,  IntPtr ev );
  [UnmanagedFunctionPointer( CC )]
  internal delegate void ConnectionFn( IntPtr cl,  IntPtr ev );

  /* events (must match raiapi2_c.h layout) */
  [StructLayout( LayoutKind.Sequential )]
  internal struct MsgEvent {
    public IntPtr subscribe;
    public IntPtr subject;
    public int    type;
    public ushort msg_type, rec_status;
    public int    old_state, recv, state;
    public long   pub_time, route_time;
    public uint   counter, old_counter;
  }
  [StructLayout( LayoutKind.Sequential )]
  internal struct SubscribeEvent {
    public IntPtr publish;
    public IntPtr subject, reply;
    public uint   query_flags;
  }
  [StructLayout( LayoutKind.Sequential )]
  internal struct DataLossEvent {
    public IntPtr session;
    public IntPtr transport_name, description;
    public uint   inbound_packet_loss, outbound_packet_loss, connection_count;
    public int    connection_loss, is_multicast;
  }
  [StructLayout( LayoutKind.Sequential )]
  internal struct ConnectionEvent {
    public IntPtr session;
    public IntPtr transport_name, description;
    public uint   connection_count;
    public int    connection_oriented, is_multicast;
  }
  [StructLayout( LayoutKind.Sequential )]
  internal struct TimeRotateState {
    public long time, period, last_time;
    public int  day_or_week;
  }

  internal static string Str( IntPtr p ) {
    return p == IntPtr.Zero ? null : Marshal.PtrToStringAnsi( p );
  }
  internal static string Str( IntPtr p,  uint len ) {
    if ( p == IntPtr.Zero ) return null;
    if ( len == 0 ) return "";
    byte[] b = new byte[ len ];
    Marshal.Copy( p, b, 0, (int) len );
    int n = (int) len;
    while ( n > 0 && b[ n - 1 ] == 0 ) n--;  /* strings carry the NUL */
    return Encoding.UTF8.GetString( b, 0, n );
  }
  internal static byte[] Bytes( IntPtr p,  uint len ) {
    byte[] b = new byte[ len ];
    if ( len > 0 ) Marshal.Copy( p, b, 0, (int) len );
    return b;
  }

  /* ---- errors ---- */
  [DllImport( Lib, CallingConvention = CC )] internal static extern uint rai_err_status( IntPtr e );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_err_reason( IntPtr e );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_err_module( IntPtr e );

  /* ---- RaiApi ---- */
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_open( string api_name,  int argc,  string[] argv,  out IntPtr api );
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_api_close( IntPtr api );
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_api_delete( IntPtr api );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_name( IntPtr api );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_version();
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_get_args( IntPtr api,  IntPtr args );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_get_dict_args( IntPtr args );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_parse_args( IntPtr api,  IntPtr args );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_open_log_args( IntPtr args,  out int opened );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_open_log( string name,  int level,  int verb );
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_api_print_log( IntPtr api,  int level,  IntPtr err,  string where,  int line,  string s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_api_log( int level,  IntPtr err,  string where,  int line,  string s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_open_dict( IntPtr args,  out int loaded );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_create_session( IntPtr api,  out IntPtr session );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_new_msg( int proto,  ushort msg_type,  ushort rec_type,  ushort seqno,  ushort rec_status,  out IntPtr m );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_new_msg_form( int proto,  ushort msg_type,  string form_type,  ushort seqno,  ushort rec_status,  out IntPtr m );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_api_set_ioctl( IntPtr api,  string parm,  string value );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_api_register_sig_handler( SignalFn fn,  IntPtr cl );

  /* ---- RaiSession ---- */
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_session_start( IntPtr s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_session_create_queue( IntPtr s,  int direct,  out IntPtr q );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_session_create_publish( IntPtr s,  int auto_inc,  out IntPtr p );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_session_create_dict( IntPtr s,  out IntPtr d );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_session_destroy( IntPtr s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_session_login( IntPtr s,  string user,  out IntPtr e );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_session_set_dataloss_cb( IntPtr s,  DataLossFn loss,  ConnectionFn conn,  IntPtr cl,  out IntPtr cb );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_session_notify_status( IntPtr s,  ushort msg_type,  ushort rec_status );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_session_get_api( IntPtr s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_session_set_name( IntPtr s,  string name );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_session_get_name( IntPtr s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_callback_delete( IntPtr cb );

  /* ---- RaiQueue ---- */
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_queue_create_subscribe( IntPtr q,  MsgFn fn,  IntPtr cl,  out IntPtr sub,  out IntPtr cb );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_queue_create_timer( IntPtr q,  TimerFn fn,  IntPtr cl,  out IntPtr t,  out IntPtr cb );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_queue_create_ipublish( IntPtr q,  SubscribeFn fn,  IntPtr cl,  out IntPtr p,  out IntPtr cb );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_queue_notify_status( IntPtr q,  ushort msg_type,  ushort rec_status );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_queue_mainloop( IntPtr q );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_queue_timed_dispatch( IntPtr q,  uint ival_ms );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_queue_dispatch( IntPtr q );
  [DllImport( Lib, CallingConvention = CC )] internal static extern uint rai_queue_get_depth( IntPtr q );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_queue_destroy( IntPtr q );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_queue_get_session( IntPtr q );

  /* ---- RaiSubscribe ---- */
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_subscribe_start( IntPtr s,  string subject,  int parm,  uint timeout_ms );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_subscribe_cancel( IntPtr s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_subscribe_refresh( IntPtr s,  uint timeout_ms );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_subscribe_subject( IntPtr s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_subscribe_in_progress( IntPtr s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_subscribe_get_queue( IntPtr s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_subscribe_state_to_string( int state );

  /* ---- RaiPublish ---- */
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_publish_msg( IntPtr p,  string subject,  IntPtr m,  long stamp );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_publish_buf( IntPtr p,  string subject,  IntPtr buf,  uint len,  long stamp );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_publish_set_prefix( IntPtr p,  string prefix );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_publish_get_prefix( IntPtr p );
  [DllImport( Lib, CallingConvention = CC )] internal static extern uint rai_publish_get_seqno( IntPtr p );
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_publish_set_seqno( IntPtr p,  uint n );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_publish_destroy( IntPtr p );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_publish_get_session( IntPtr p );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_ipublish_publish( IntPtr p );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_ipublish_start( IntPtr p,  string subject );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_ipublish_cancel( IntPtr p );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_ipublish_in_progress( IntPtr p );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_ipublish_get_queue( IntPtr p );

  /* ---- RaiTimer ---- */
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_timer_start( IntPtr t );
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_timer_stop( IntPtr t );
  [DllImport( Lib, CallingConvention = CC )] internal static extern long rai_timer_get_interval( IntPtr t );
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_timer_set_interval( IntPtr t,  long ms );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_timer_get_queue( IntPtr t );
